Adding Encryption and Decryption. some code refactoring

--- a/SercetStore/SecretStore.csproj
+++ b/SercetStore/SecretStore.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>29a07df9-4c20-4597-8b80-d57268dbeff1</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
